[gd_scene load_steps=49 format=2]

[ext_resource path="res://Assets/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Src/Player/PlayerCamera.gd" type="Script" id=3]
[ext_resource path="res://Src/Player/ObjectDragging.gd" type="Script" id=4]
[ext_resource path="res://Src/Player/WeaponHandler.gd" type="Script" id=5]
[ext_resource path="res://Src/Player/ItemPickup.gd" type="Script" id=6]
[ext_resource path="res://Assets/Player/CameraMoveIndicator.png" type="Texture" id=7]
[ext_resource path="res://Src/Player/CameraNotification.gd" type="Script" id=8]
[ext_resource path="res://Src/Player/Taser.gd" type="Script" id=9]
[ext_resource path="res://Src/Throwables/ObjectThrower.tscn" type="PackedScene" id=10]
[ext_resource path="res://Src/Player/ThinAreaTravelling.gd" type="Script" id=11]
[ext_resource path="res://Src/Player/GroundDetection.gd" type="Script" id=12]
[ext_resource path="res://Src/Button/PressureArea.gd" type="Script" id=13]
[ext_resource path="res://Assets/SFX/taser_deploy.wav" type="AudioStream" id=14]
[ext_resource path="res://Assets/SFX/taser_hit.wav" type="AudioStream" id=15]
[ext_resource path="res://Assets/SFX/jump_down.wav" type="AudioStream" id=16]
[ext_resource path="res://Assets/SFX/jump_up.wav" type="AudioStream" id=17]
[ext_resource path="res://Assets/SFX/body_fall.wav" type="AudioStream" id=18]
[ext_resource path="res://Assets/SFX/body_pickup.wav" type="AudioStream" id=19]
[ext_resource path="res://Assets/SFX/sfx_footstep_new2.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/SFX/sfx_footstep_new1.wav" type="AudioStream" id=21]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 18.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 10.4134

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.18156, 14.3244 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8.60686, 14.6427 )

[sub_resource type="Animation" id=9]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 20, 0 ), Vector2( 20, 20 ), Vector2( 0, 20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/CarryPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, -13 ) ]
}

[sub_resource type="Animation" id=12]
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38, 39, 40, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/CarryPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 3, -13 ), Vector2( 3, -12 ), Vector2( 2, -13 ), Vector2( 2, -14 ), Vector2( 3, -13 ), Vector2( 3, -12 ), Vector2( 2, -12 ), Vector2( 2, -13 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=14]
length = 0.45
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[sub_resource type="Animation" id=15]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.45
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 15, 17 ]
}

[sub_resource type="Animation" id=17]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -18 ), Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -20 ), Vector2( 0, -16 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.9
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28 ]
}

[sub_resource type="Animation" id=21]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 33, 32, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/CarryPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 3, -13 ), Vector2( 9, 0 ) ]
}

[sub_resource type="Animation" id=22]
length = 2.0
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=23]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 32, 33 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flippable/CarryPosition:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 9, 0 ), Vector2( 3, -13 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 0 ]
}

[sub_resource type="Animation" id=25]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 30, 31 ]
}

[sub_resource type="Animation" id=26]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 29, 30 ]
}

[sub_resource type="Animation" id=27]
length = 0.72
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Flippable/PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36, 0.48, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSounds/Footstep1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSounds/Footstep2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.36 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 130
script = ExtResource( 2 )

[node name="Flippable" type="Node2D" parent="."]

[node name="PlayerSprite" type="Sprite" parent="Flippable"]
position = Vector2( 0, -16 )
z_index = 50
z_as_relative = false
texture = ExtResource( 1 )
hframes = 42
frame = 4

[node name="StunRayCast" type="RayCast2D" parent="Flippable"]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 16

[node name="ObjectSpawn" type="Position2D" parent="Flippable"]
position = Vector2( 5, -15 )

[node name="CarryPosition" type="Position2D" parent="Flippable"]
position = Vector2( 3, -13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"NormalColliders",
]]
visible = false
position = Vector2( -0.140306, -14.3508 )
shape = SubResource( 1 )

[node name="DuckCollisionShape2D" type="CollisionShape2D" parent="." groups=[
"DuckColliders",
]]
visible = false
position = Vector2( -0.07, -10.5 )
shape = SubResource( 2 )

[node name="PlayerLightArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLightArea" groups=[
"NormalColliders",
]]
position = Vector2( 0, -13 )
shape = SubResource( 3 )

[node name="DuckCollisionShape2D" type="CollisionShape2D" parent="PlayerLightArea" groups=[
"DuckColliders",
]]
position = Vector2( 0, -6 )
shape = SubResource( 4 )

[node name="PlayerArea" type="Area2D" parent="." groups=[
"PlayerArea",
]]
visible = false
collision_mask = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea" groups=[
"NormalColliders",
]]
position = Vector2( 0.0612944, -13.8838 )
shape = SubResource( 5 )

[node name="DuckCollisionShape2D" type="CollisionShape2D" parent="PlayerArea" groups=[
"DuckColliders",
]]
position = Vector2( -0.0790121, -9.95515 )
shape = SubResource( 4 )

[node name="GroundDetection" type="Area2D" parent="."]
visible = false
collision_mask = 2053
script = ExtResource( 12 )
areaCollidersGroup = "ThinArea;"

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetection"]
position = Vector2( 0, 2 )
shape = SubResource( 6 )

[node name="PressureArea" type="Area2D" parent="."]
visible = false
collision_layer = 512
collision_mask = 0
script = ExtResource( 13 )
mainNodePath = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressureArea"]
position = Vector2( 0, -1 )
shape = SubResource( 7 )

[node name="GuardPickup" type="Area2D" parent="."]
collision_mask = 16
script = ExtResource( 4 )
playerPath = NodePath("..")
carryPositionPath = NodePath("../Flippable/CarryPosition")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GuardPickup"]
position = Vector2( 1.05208, -13.9461 )
shape = SubResource( 8 )

[node name="TravelTween" type="Tween" parent="."]

[node name="TravelRayCasts" type="Node2D" parent="."]

[node name="RayCast2DUp" type="RayCast2D" parent="TravelRayCasts"]
position = Vector2( -0.330444, -28.743 )
enabled = true
cast_to = Vector2( 0, -30 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2DDown" type="RayCast2D" parent="TravelRayCasts"]
position = Vector2( 0.166855, 0.591519 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="CameraNotification" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -23 )
z_index = 51
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -12 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_smoothed = true
smoothing_speed = 50.0
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D"]
anims/shake = SubResource( 9 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/action = SubResource( 10 )
anims/carryIdle = SubResource( 11 )
anims/carryWalk = SubResource( 12 )
anims/dodge = SubResource( 13 )
anims/dodge_walk = SubResource( 14 )
anims/duck = SubResource( 15 )
anims/duck_walk = SubResource( 16 )
anims/idle = SubResource( 17 )
anims/jump_down = SubResource( 18 )
anims/jump_up = SubResource( 19 )
anims/ladder = SubResource( 20 )
anims/laydown = SubResource( 21 )
anims/lose = SubResource( 22 )
anims/pickup = SubResource( 23 )
anims/taser = SubResource( 24 )
anims/throw = SubResource( 25 )
anims/throw_load = SubResource( 26 )
anims/walk = SubResource( 27 )

[node name="WeaponHandler" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Taser" type="Node2D" parent="WeaponHandler"]
script = ExtResource( 9 )
playerPath = NodePath("../..")
stunRayPath = NodePath("../../Flippable/StunRayCast")

[node name="StoneThrower" parent="WeaponHandler" instance=ExtResource( 10 )]

[node name="SnackThrower" parent="WeaponHandler" instance=ExtResource( 10 )]
objectScenePath = "res://Src/Throwables/Snack.tscn"
infiniteAmmo = false

[node name="ItemPickup" type="Node" parent="."]
script = ExtResource( 6 )
playerPath = NodePath("..")
carryPositionPath = NodePath("../Flippable/CarryPosition")

[node name="ThinAreaTravelling" type="Node" parent="."]
script = ExtResource( 11 )
travelTweenPath = NodePath("../TravelTween")
travelRayDownPath = NodePath("../TravelRayCasts/RayCast2DDown")
travelRayUpPath = NodePath("../TravelRayCasts/RayCast2DUp")
playerPath = NodePath("..")

[node name="PlayerSounds" type="Node2D" parent="."]

[node name="JumpDown" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 16 )
bus = "Sound"

[node name="JumpUp" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 17 )
bus = "Sound"

[node name="TaserDeploy" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 14 )
bus = "Sound"

[node name="TaserHit" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 15 )
bus = "Sound"

[node name="Footstep1" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 21 )
volume_db = -8.0
pitch_scale = 1.1
bus = "Sound"

[node name="Footstep2" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 20 )
volume_db = -8.0
bus = "Sound"

[node name="CrouchWalk" type="AudioStreamPlayer" parent="PlayerSounds"]
bus = "Sound"

[node name="BodyFall" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = ExtResource( 18 )
attenuation = 2.0
bus = "Sound"

[node name="BodyPickup" type="AudioStreamPlayer2D" parent="PlayerSounds"]
stream = ExtResource( 19 )
attenuation = 2.0
bus = "Sound"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
